@@ -5,7 +5,10 @@ Release history for Dist-Zilla-App-Command-critic
  - Dependencies changed since 0.001004, see misc/*.deps* for details
  - develop: +3 ↑3 -1 (recommends: ↓1, suggests: ↑2)
  - runtime: (recommends: +1)
- - test: (recommends: ↓1)
+ - test: ↑1 -1 (recommends: ↓1)
+
+ [Minor]
+ - Moving app testing to dztest.
 
 0.001004 2014-11-01T13:07:20Z 437dbe4
  [Bugfix]
